unpackaged/main/default/objects/Note_satisfaction_client__c/Note_satisfaction_client__c.object-meta.xml
<CustomObject>
    <label>Note de satisfaction client</label>
    <nameField>
        <label>Nom de Note de satisfaction client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes de satisfaction client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>