unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Annees_des_enquetes__c.field-meta.xml
<CustomField>
    <fullName>Annees_des_enquetes__c</fullName>
    <label>Année de l’enquête</label>
    <length>255</length>
    <type>Text</type>
</CustomField>