unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notes de satisfaction client</relationshipLabel>
    <relationshipName>Notes_de_satisfaction_client</relationshipName>
    <type>Lookup</type>
</CustomField>