unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Evolution_note_satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Evolution_note_satisfaction__c</fullName>
    <label>Évolution de la note de la satisfaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>