unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Interroge_qualite_client__c.field-meta.xml
<CustomField>
    <fullName>Interroge_qualite_client__c</fullName>
    <label>Interrogé en qualité de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Conteneur</fullName>
            </value>
            <value>
                <fullName>Meuble</fullName>
            </value>
            <value>
                <fullName>Véhicule Frigorifique</fullName>
            </value>
            <value>
                <fullName>Véhicule Sec En IDF</fullName>
            </value>
            <value>
                <fullName>Véhicule Sec Hors IDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>