unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Note_globale_PF__c.field-meta.xml
<CustomField>
    <fullName>Note_globale_PF__c</fullName>
    <label>Note globale PF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>