unpackaged/main/default/objects/Note_satisfaction_client__c/fields/Note_satisfaction_client_Field__c.field-meta.xml
<CustomField>
    <fullName>Note_satisfaction_client_Field__c</fullName>
    <label>Note de satisfaction client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>