unpackaged/main/default/objects/Note_satisfaction_client__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Compte__c</columns>
    <columns>Interroge_qualite_client__c</columns>
    <columns>Annees_des_enquetes__c</columns>
    <columns>Note_globale_PF__c</columns>
    <columns>Note_satisfaction_client_Field__c</columns>
    <columns>Evolution_note_satisfaction__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>